# dagsampler

./: .gitignore  README.md  pyproject.toml  todo.md
.github/workflows/: docs-pages.yml
causal_simulator/: __init__.py
causal_simulator/causal_simulator/: __init__.py  causal_sim.py  cli.py
configs/: config_fisherz.py  config_template.py
docs/: Makefile  api.rst  conf.py  config_examples.rst  formulations.rst  index.rst  overview.rst  usage.rst
src/causal_simulator/: __init__.py  causal_sim.py  templates.py
tests/: test_simulation_smoke.py
