[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulation"
version = "0.1.0"
description = "Causal simulator and experiment runner"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Pavel Averin" }]
license = { text = "Proprietary" }
dependencies = [
  "numpy>=1.22",
  "pandas>=1.3",
  "networkx>=2.6",
  "scipy>=1.7"
]

[project.scripts]
simulation-generate = "causal_simulator.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "causal_simulator*"
]
exclude = [
  "envs*",
  "notebooks*",
  "plots*",
  "results*",
]
